--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-draggable-flatlist": "^2.6.2",
+    "react-native-icons": "^0.7.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "~0.13.12",
     "recyclerlistview": "^3.0.5"
   },
